# GaussianClouds

./: .gitignore  CMakeLists.txt  README.md  how to run.txt
include/: Camera.h  GaussianData.h  PLYLoader.h  PointCloudRenderer.h  Renderer.h  Shader.h  SplatRenderer.h
legacy/: check_glfw.cpp  glfw_render_test.cpp  glfw_window_test.cpp
shaders/: basic.vert  indirect_setup.comp  pointcloud.frag  pointcloud.vert  preprocess.comp  radixsort_histograms.comp  radixsort_scatter.comp  sort.comp  splat.frag  splat.vert
src/: Camera.cpp  PLYLoader.cpp  PointCloudRenderer.cpp  Renderer.cpp  Shader.cpp  SplatRenderer.cpp  main.cpp
tools/: generate_test_ply.py
